--- a/conf/config.json
+++ b/conf/config.json
@@ -2,7 +2,8 @@
     "debug": false,
     "web": {
         "port": 8080,
-        "host": "localhost"
+        "host": "localhost",
+        "heartbeat": 10
     },
     "logger": {
         "dirpath": "./",
