--- a/conf/config.json
+++ b/conf/config.json
@@ -2,8 +2,8 @@
     "debug": false,
     "web": {
         "port": 8080,
-        "host": "localhost",
-        "heartbeat": 10
+        "host": "127.0.0.1",
+        "heartbeat": 100
     },
     "logger": {
         "dirpath": "./",
