add data config

--- a/conf/config.json
+++ b/conf/config.json
@@ -8,5 +8,8 @@
     "logger": {
         "dirpath": "./",
         "filename": "ir-web.log"
+    },
+    "data": {
+        "path": "./pages/"
     }
 }
