add config args

--- a/conf/config.json
+++ b/conf/config.json
@@ -9,6 +9,9 @@
         "dirpath": "./",
         "filename": "ir-web.log"
     },
+    "engine": {
+        "distance": 2
+    },
     "data": {
         "path": "./pages/"
     }
